@@ -1,6 +1,7 @@
 48
 ================
 
+12/10/23 Force daily obs animal links to open in a new tab #489
 12/10/23 Make SAC configuration available to Canadian shelters
 11/10/23 Fix handling of autocomplete in email addresses #1337
 09/10/23 Include couple email from activemovement in animal email dropdown
